# passivized_vault_client

./: Cargo.toml  LICENSE  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: auth-userpass.rs  auto-unseal.rs
examples/example_utils/: container.rs  docker.rs  errors.rs  hcl.rs  images.rs  lib.rs  retrying.rs  timestamps.rs
passivized_vault_client/: Cargo.toml
passivized_vault_client/examples/: auto-unseal.rs
passivized_vault_client/examples/example_utils/: container.rs  errors.rs  hcl.rs  images.rs  other.rs
passivized_vault_client/src/: client.rs  errors.rs  imp.rs  models.rs
passivized_vault_client/tests/: test_vault_auth_tokens.rs  test_vault_auth_userpass.rs  test_vault_status.rs
passivized_vault_client/tests/test_utils/: lib.rs
passivized_vault_client_versions/: Cargo.toml
passivized_vault_client_versions/src/: lib.rs
src/: client.rs  errors.rs  lib.rs  models.rs  url.rs
src/models/auth/: mod.rs  token.rs  userpass.rs
tests/: test_vault_auth_tokens.rs  test_vault_auth_userpass.rs  test_vault_status.rs
tests/resources/: change_own_password.hcl
