[package]
authors = ["Joshua Potts <8704475+iamjpotts@users.noreply.github.com>"]
categories = ["api-bindings", "asynchronous"]
description = "Vault Client - initialize and monitor Hashicorp Vault nodes"
edition = "2021"
include = [ 
    "**/*.rs",
]
license = "MPL-2.0"
name = "passivized_vault_client"
repository = "https://github.com/iamjpotts/passivized_vault_client"
rust-version = "1.64"
version = "0.0.8-alpha"

[dependencies]
http = "0.2"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
time = "0.3"
urlencoding = "2.1"

[dev-dependencies]
base64 = "0.13"
const-str = "0.5"
passivized_docker_engine_client = "0.0.5"
passivized_test_support = "0.0.6"
tempfile = "3.3"
tokio = { version = "1.21", features = ["fs", "macros", "rt-multi-thread"] }
