[package]
description = "Test support crate defining which Vault versions are tested against"
edition = "2021"
include = [
    "**/*.rs",
]
license = "MPL-2.0"
name = "passivized_vault_client_versions"
readme = "../README.md"
repository = "https://github.com/iamjpotts/passivized_vault_client"
version = "0.0.11-alpha"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
test-case = "3.1"
